fix cover on mobile

--- a/styles/components/bg-video.scss
+++ b/styles/components/bg-video.scss
@@ -4,5 +4,6 @@
   .video {
     height: 100vh;
     object-fit: cover;
+    width: 100vw;
   }
 }
