--- a/styles/pages/login/login.scss
+++ b/styles/pages/login/login.scss
@@ -1,7 +1,6 @@
 
 .login {
-
-  ::-webkit-scrollbar { display: none; }
+  overflow: hidden;
 
   .columns {
     margin: 0;
